--- a/Droidhunter1D/pom.xml
+++ b/Droidhunter1D/pom.xml
@@ -15,26 +15,13 @@
       <scope>test</scope>
     </dependency>
     
-    <dependency>
-      <groupId>br.odb</groupId>
-      <artifactId>gameapp</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>br.odb</groupId>
-      <artifactId>gameutils</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-  
-
 	<dependency>
-		<groupId> br.odb </groupId>
+		<groupId> br.odb.droidhunter </groupId>
 		<artifactId>droidhunter-core-java</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</dependency>
-</dependencies>  
+	
+	</dependencies>  
 
 	<properties>
 		<maven.compiler.source>1.6</maven.compiler.source>
@@ -52,7 +39,7 @@
 				exec-maven-plugin
 			</artifactId>
 			<configuration>
-				<mainClass>br.odb.droidhunter.DroidHunterMainApp</mainClass>
+				<mainClass>br.odb.droidhunter.DroidHunterRedux1D</mainClass>
 			</configuration>
 			</plugin>
 		</plugins>
