--- a/droidhunter-core-java/.classpath
+++ b/droidhunter-core-java/.classpath
@@ -4,7 +4,8 @@
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/br/odb/gameapp/1.0-SNAPSHOT/gameapp-1.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/br/odb/gameutils/1.0-SNAPSHOT/gameutils-1.0-SNAPSHOT.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/br/odb/gameworld/1.0-SNAPSHOT/gameworld-1.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/br/odb/gameutils/1.0-SNAPSHOT/gameutils-1.0-SNAPSHOT.jar"/>
 </classpath>
