--- a/droidhunter-core-java/pom.xml
+++ b/droidhunter-core-java/pom.xml
@@ -27,6 +27,9 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+
+
+
     </dependency>
 
 	<dependency>
@@ -35,4 +38,10 @@
 		<version>1.0-SNAPSHOT</version>
 	</dependency>
   </dependencies>
+
+
+  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 </project>
