--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,21 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.properties
+
+node-hunter-3dengine/.project
+
+droidhunter-core-java/.classpath
+
+droidhunter-core-java/.project
+
+node-hunter-core/.project
+
+node-hunter-core/.classpath
+
+node-hunter-3dengine/.classpath
+
+node-hunter-desktop/.project
+
+node-hunter-desktop/.classpath
