Add a lot of stuff to gitignore
You probably know why.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,50 @@
+/node-hunter-android/app/src/main/assets/chamber.opt.xml~
+/node-hunter-desktop/chamber.opt.xml~
+/node-hunter-desktop/floor1.opt.xml~
+/node-hunter-desktop/nodehunter-desktop.iml
+/node-hunter-desktop/simple.opt.xml~
+/node-hunter-android/.idea/codeStyleSettings.xml
+/node-hunter-android/.idea/encodings.xml
+/node-hunter-core/target/surefire-reports/TEST-br.odb.droidhunter.AppTest.xml
+/node-hunter-core/target/surefire-reports/br.odb.droidhunter.AppTest.txt
+/node-hunter-desktop/.idea/.name
+/node-hunter-desktop/.idea/compiler.xml
+/node-hunter-desktop/.idea/copyright/profiles_settings.xml
+/node-hunter-desktop/.idea/encodings.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_gameutils_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_gameworld_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_liboldfart_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_libscene_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_libstrip_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_libsvg_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__br_odb_vintage_engine_1_0_SNAPSHOT.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_main_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_android_armv6_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_linux_amd64_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_linux_armv6_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_linux_armv6hf_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_linux_i586_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_macosx_universal_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_solaris_amd64_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_solaris_i586_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_windows_amd64_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_gluegen_gluegen_rt_natives_windows_i586_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_main_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_android_armv6_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_linux_amd64_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_linux_armv6_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_linux_armv6hf_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_linux_i586_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_macosx_universal_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_solaris_amd64_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_solaris_i586_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_windows_amd64_2_0_2.xml
+/node-hunter-desktop/.idea/libraries/Maven__org_jogamp_jogl_jogl_all_natives_windows_i586_2_0_2.xml
+/node-hunter-desktop/.idea/misc.xml
+/node-hunter-desktop/.idea/modules.xml
+/node-hunter-desktop/.idea/workspace.xml
 *.class
 
 # Mobile Tools for Java (J2ME)
